2002-01-14  Naba Kumar <naba@gnome.org>

	* src/anjuta.glade, src/preferences.[h,c],
	src/anjuta_dialogs_strings.c: Added build and editor
	preferences pages and other UIs. Fixed preferense loading and saving.
	
	* src/anjuta.c: Does case-insensitive match for tabs position
	preferences and removed preferences loading (done at _new() call).
	
	* anjuta-tools.c: Debugged tools dialog handling.
	* plugins/class-gen/clsGen.c: Fixed an undefined function.
	
2002-01-13  Naba Kumar <naba@gnome.org>

	* ABOUT-NLS: Update (strange).

	* autogen.sh: Removed blocking code.

	* configure.in: Fixed an autogen bug.
	
2003-01-13  Naba Kumar <naba@gnome.org>

	* (new)src/anjuta.gladep
	(new)src/messagebox.c
	(new)src/messagebox.h: Added files. References to messagesbox.[c,h]
	will be gradually removed (and then the files).
	
	* Makefile.am,
	anjuta.prj,
	printing/print-util.c,
	printing/print.c,
	scintilla/ScintillaGTK.c,xx
	src/Makefile.am,
	src/an_file_view.c,
	src/an_symbol_view.c,
	src/anjuta.c,
	src/anjuta.glade
	src/anjuta.h,
	src/anjuta_dialogs_strings.c,
	src/anjuta_gui.c,
	src/attach_process.c,
	src/attach_process.h,
	src/breakpoints.c,
	src/breakpoints.h,
	src/breakpoints_cbs.c,
	src/commands.c,
	src/commands.h,
	src/compiler_options.c,
	src/compiler_options.h,
	src/compiler_options_cbs.c,
	src/configurer.c,
	src/configurer.h,
	src/controls.c,
	src/cvs_cbs.c,
	src/debug_tree.c,
	src/debug_tree.h,
	src/executer.c,
	src/executer.h,
	src/find_in_files.c,
	src/find_in_files.h,
	src/find_in_files_cbs.c,
	src/find_replace.c,
	src/find_replace.h,
	src/find_text.c,
	src/find_text.h,
	src/goto_line.c,
	src/help.c,
	src/help.h,
	src/launcher.c,
	src/main.c,
	src/main_menubar.c,
	src/mainmenu_callbacks.c,
	src/message-manager.c,c
	src/pixmaps.h,
	src/preferences.c,
	src/project_config.c,
	src/project_config.h,
	src/project_dbase.c,
	src/project_import_cbs.c,
	src/resources.c,
	src/resources.h,
	src/splash.c,
	src/src_paths.c,
	src/src_paths.h,
	src/src_paths_gui.c,